--- a/translations/messages.lt.po
+++ b/translations/messages.lt.po
@@ -4170,7 +4170,7 @@ msgid "Upgrade Chamilo"
 msgstr "Atnaujinti Chamilo"
 
 msgid "Website"
-msgstr "Chamilo namų puslapis"
+msgstr "Namų puslapis"
 
 msgid "Documentation"
 msgstr "Dokumentacija"
@@ -7287,9 +7287,6 @@ msgid "Import AICC, SCORM and Chamilo learning path"
 msgstr "SCORM ir AICC importavimas"
 
 msgid "To continue add a section or a learning object or activity to your course."
-msgstr "Galite įdėti skyrių, modulį arba žingsnį kairėje esančiame meniu."
-
-msgid "     <html><body><p><big><img height=\"250\" width=\"250\" align=\"right\" src=\"images/gallery/mr_dokeos/animated/practicerAnim.gif\" alt=\"practicerAnim.gif\" />Welcome to the Chamilo course authoring tool !</big></p>        <ul>            <li><b>Build</b> : Add learning objects and activities to your course</li>            <li><b>Organize</b> : Add audio comments and order learning objects in the table of contents</li>            <li><b>Display</b> : Watch the course from learner's viewpoint</li>            <li><b>Add section</b> : Chapter 1, Chapter 2 or Week 1, Week 2...</li>            <li><b>Add learning object or activity</b> : activities, tests, videos, multimedia pages</li>        </ul></html></body>"
 msgstr "Galite įdėti skyrių, modulį arba žingsnį kairėje esančiame meniu."
 
 msgid "Prerequisites to the current learning object have been added."
@@ -10759,9 +10756,6 @@ msgstr "Poižūris"
 
 msgid "Intranet"
 msgstr "Intranetas"
-
-msgid "Login failed - if you are not registered, you can do so using the <a href=claroline/auth/inscription.php>registration form</a>"
-msgstr "Prisijungimas nepavyko - jei Jūs neregistruotas, tai galite prisiregistruoti <a href=claroline/auth/inscription.php>cia</a>"
 
 msgid "My account"
 msgstr "Vartotojas"
