--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -4177,7 +4177,7 @@ msgid "Upgrade Chamilo"
 msgstr "Upgrade pentru Chamilo"
 
 msgid "Website"
-msgstr "Site Chamilo"
+msgstr "Site"
 
 msgid "Documentation"
 msgstr "Documentatie"
@@ -7296,9 +7296,6 @@ msgstr "Importa SCORM si AICC"
 msgid "To continue add a section or a learning object or activity to your course."
 msgstr "Pentru a continua puteti adauga un modul, capitol sau pas caii de invatare din meniul din partea dreapta."
 
-msgid "     <html><body><p><big><img height=\"250\" width=\"250\" align=\"right\" src=\"images/gallery/mr_dokeos/animated/practicerAnim.gif\" alt=\"practicerAnim.gif\" />Welcome to the Chamilo course authoring tool !</big></p>        <ul>            <li><b>Build</b> : Add learning objects and activities to your course</li>            <li><b>Organize</b> : Add audio comments and order learning objects in the table of contents</li>            <li><b>Display</b> : Watch the course from learner's viewpoint</li>            <li><b>Add section</b> : Chapter 1, Chapter 2 or Week 1, Week 2...</li>            <li><b>Add learning object or activity</b> : activities, tests, videos, multimedia pages</li>        </ul></html></body>"
-msgstr "Puteti adauga un modul, capitol sau pas caii de invatare din meniul din partea dreapta."
-
 msgid "Prerequisites to the current learning object have been added."
 msgstr "Cerintele premergatoare ale pasului curent au fost adaugate."
 
@@ -9559,7 +9556,7 @@ msgid "Inactivity on %s"
 msgstr "Inactivitate pe %s"
 
 msgid "Dear user,<br /><br /> you are not active on %s since more than %s days."
-msgstr "Stimate utilizator,<br /><br /> nu sunteti activ pe demo.dokeos de mai mult de % zile."
+msgstr "Stimate utilizator,<br /><br /> nu sunteti activ pe demo.chamilo de mai mult de % zile."
 
 msgid "OpenID authentication"
 msgstr "Deschide autentificarea ID"
@@ -10766,9 +10763,6 @@ msgstr "Opinie"
 
 msgid "Intranet"
 msgstr "Intranet"
-
-msgid "Login failed - if you are not registered, you can do so using the <a href=claroline/auth/inscription.php>registration form</a>"
-msgstr "Autentificare esuata - daca nu esti inregistrat(a), te poti inregistra folosind <a href=claroline/auth/inscription.php>formularul de inregistrare</a>"
 
 msgid "My account"
 msgstr "Utilizator"
