--- a/translations/messages.es_MX.po
+++ b/translations/messages.es_MX.po
@@ -4168,7 +4168,7 @@ msgid "Upgrade Chamilo"
 msgstr "Actualizar Chamilo"
 
 msgid "Website"
-msgstr "Web site de Chamilo"
+msgstr "Web site"
 
 msgid "Documentation"
 msgstr "Documentación"
@@ -7286,9 +7286,6 @@ msgstr "Importación SCORM y AICC"
 
 msgid "To continue add a section or a learning object or activity to your course."
 msgstr "Para continuar puede agregar un módulo, capítulo o paso a su itinerario formativo desde el menu izquierdo."
-
-msgid "     <html><body><p><big><img height=\"250\" width=\"250\" align=\"right\" src=\"images/gallery/mr_dokeos/animated/practicerAnim.gif\" alt=\"practicerAnim.gif\" />Welcome to the Chamilo course authoring tool !</big></p>        <ul>            <li><b>Build</b> : Add learning objects and activities to your course</li>            <li><b>Organize</b> : Add audio comments and order learning objects in the table of contents</li>            <li><b>Display</b> : Watch the course from learner's viewpoint</li>            <li><b>Add section</b> : Chapter 1, Chapter 2 or Week 1, Week 2...</li>            <li><b>Add learning object or activity</b> : activities, tests, videos, multimedia pages</li>        </ul></html></body>"
-msgstr "Puede agregar un módulo, capítulo o paso a su itinerario formativo desde el menú izquierdo."
 
 msgid "Prerequisites to the current learning object have been added."
 msgstr "Prerequisitos para el paso actual han sido agregados."
@@ -10723,7 +10720,7 @@ msgid "By enabling this option, session admins will only be able to see, in the 
 msgstr ""
 
 msgid "Login failed - incorrect login or password."
-msgstr "Acceso no válido.<br />Si usted no está registrado complete el <a href='claroline/auth/inscription.php'>formulario de inscripción</a></font color>"
+msgstr "Acceso no válido."
 
 msgid "Pass"
 msgstr "Contraseña"
@@ -10757,9 +10754,6 @@ msgstr "Opinión"
 
 msgid "Intranet"
 msgstr "Intranet"
-
-msgid "Login failed - if you are not registered, you can do so using the <a href=claroline/auth/inscription.php>registration form</a>"
-msgstr "Acceso negado - si no está registrado utilice el <a href=claroline/auth/inscription.php>formulario de inscripción</a>"
 
 msgid "My account"
 msgstr "Usuario"
