--- a/translations/messages.eu_ES.po
+++ b/translations/messages.eu_ES.po
@@ -4168,7 +4168,7 @@ msgid "Upgrade Chamilo"
 msgstr "Berritu Chamilo bertsioa"
 
 msgid "Website"
-msgstr "Chamilo webgunea"
+msgstr "Webgunea"
 
 msgid "Documentation"
 msgstr "Dokumentazioa"
@@ -7286,9 +7286,6 @@ msgstr "Inportatu SCORM eta AICC"
 
 msgid "To continue add a section or a learning object or activity to your course."
 msgstr "Jarraitzeko, gehitu iezaiozu atal bat edo ikaskuntza objektu bat edo jarduera bat ikastaroari"
-
-msgid "     <html><body><p><big><img height=\"250\" width=\"250\" align=\"right\" src=\"images/gallery/mr_dokeos/animated/practicerAnim.gif\" alt=\"practicerAnim.gif\" />Welcome to the Chamilo course authoring tool !</big></p>        <ul>            <li><b>Build</b> : Add learning objects and activities to your course</li>            <li><b>Organize</b> : Add audio comments and order learning objects in the table of contents</li>            <li><b>Display</b> : Watch the course from learner's viewpoint</li>            <li><b>Add section</b> : Chapter 1, Chapter 2 or Week 1, Week 2...</li>            <li><b>Add learning object or activity</b> : activities, tests, videos, multimedia pages</li>        </ul></html></body>"
-msgstr "Ongi etorri ikastaroak editatzeko Chamilo tresnara ! practicerAnim.gif"
 
 msgid "Prerequisites to the current learning object have been added."
 msgstr "Uneko ikaskuntza objektu honen aurretiko betekizunak gehitu dira"
@@ -10757,9 +10754,6 @@ msgstr "Iritzia"
 
 msgid "Intranet"
 msgstr "Intranet"
-
-msgid "Login failed - if you are not registered, you can do so using the <a href=claroline/auth/inscription.php>registration form</a>"
-msgstr "Konexioak huts egin du - erregistraturik ez bazaude, erregistratzeko datu orria bete dezakezu"
 
 msgid "My account"
 msgstr "Erabiltzailearen menua"
