--- a/translations/messages.mk.po
+++ b/translations/messages.mk.po
@@ -4168,7 +4168,7 @@ msgid "Upgrade Chamilo"
 msgstr "Надгради го Chamilo"
 
 msgid "Website"
-msgstr "Веб страна на Chamilo"
+msgstr "Веб страна"
 
 msgid "Documentation"
 msgstr "Документација"
@@ -7286,9 +7286,6 @@ msgstr "Увоз на SCORM и AICC"
 
 msgid "To continue add a section or a learning object or activity to your course."
 msgstr "За да продолжите, може да додадете модул, поглавје или чекор на Вашата Патека на учењето од менито лево."
-
-msgid "     <html><body><p><big><img height=\"250\" width=\"250\" align=\"right\" src=\"images/gallery/mr_dokeos/animated/practicerAnim.gif\" alt=\"practicerAnim.gif\" />Welcome to the Chamilo course authoring tool !</big></p>        <ul>            <li><b>Build</b> : Add learning objects and activities to your course</li>            <li><b>Organize</b> : Add audio comments and order learning objects in the table of contents</li>            <li><b>Display</b> : Watch the course from learner's viewpoint</li>            <li><b>Add section</b> : Chapter 1, Chapter 2 or Week 1, Week 2...</li>            <li><b>Add learning object or activity</b> : activities, tests, videos, multimedia pages</li>        </ul></html></body>"
-msgstr "Може да додадете модул, поглавје или чекор во Вашата Патека на учењето од менито лево."
 
 msgid "Prerequisites to the current learning object have been added."
 msgstr "Биле додадени предуслови за тековниот чекор."
@@ -10757,9 +10754,6 @@ msgstr "Мислење"
 
 msgid "Intranet"
 msgstr "Интранет"
-
-msgid "Login failed - if you are not registered, you can do so using the <a href=claroline/auth/inscription.php>registration form</a>"
-msgstr "Најавувањето беше неуспешно - ако не сте регистрирани, можете да го направите тоа ползувајќи   го <a href=claroline/auth/inscription.php>форма за регистрирање</a>"
 
 msgid "My account"
 msgstr "Корисник"
