--- a/translations/messages.sl.po
+++ b/translations/messages.sl.po
@@ -3219,7 +3219,7 @@ msgid "Your company short name"
 msgstr "Kratko ime ustanove"
 
 msgid "Use this script only after backup. The Chamilo team is not responsible for lost or corrupted data."
-msgstr "Uporabi ta skript le po tvorbi rezervne kopije. Ekipa Chamilo/Claroline ni odgovorna za izgubo ali okvaro podatkov"
+msgstr "Uporabi ta skript le po tvorbi rezervne kopije. Ekipa Chamilo ni odgovorna za izgubo ali okvaro podatkov"
 
 msgid "Allow self-registration as a trainer"
 msgstr "Dovoli samoregistracijo kot kreator tečaja"
@@ -4177,7 +4177,7 @@ msgid "Upgrade Chamilo"
 msgstr "Nadgradi Chamilo"
 
 msgid "Website"
-msgstr "Spletna stran Chamilo"
+msgstr "Spletna stran"
 
 msgid "Documentation"
 msgstr "Dokumentacija"
@@ -7295,9 +7295,6 @@ msgstr "SCORM in  AICC  uvoz"
 
 msgid "To continue add a section or a learning object or activity to your course."
 msgstr "V nadaljevanju lahko dodate poglavja ali korake k vaši učni poti. Uporabite menu na levi strani."
-
-msgid "     <html><body><p><big><img height=\"250\" width=\"250\" align=\"right\" src=\"images/gallery/mr_dokeos/animated/practicerAnim.gif\" alt=\"practicerAnim.gif\" />Welcome to the Chamilo course authoring tool !</big></p>        <ul>            <li><b>Build</b> : Add learning objects and activities to your course</li>            <li><b>Organize</b> : Add audio comments and order learning objects in the table of contents</li>            <li><b>Display</b> : Watch the course from learner's viewpoint</li>            <li><b>Add section</b> : Chapter 1, Chapter 2 or Week 1, Week 2...</li>            <li><b>Add learning object or activity</b> : activities, tests, videos, multimedia pages</li>        </ul></html></body>"
-msgstr "Dodate lahko poglavje ali korak k vaši učni poti. Uporabite menu na levi strani."
 
 msgid "Prerequisites to the current learning object have been added."
 msgstr "Predzahteve tekočemu učnemu objektu so bile dodane."
@@ -10767,9 +10764,6 @@ msgstr "Mnenje"
 msgid "Intranet"
 msgstr "Intranet"
 
-msgid "Login failed - if you are not registered, you can do so using the <a href=claroline/auth/inscription.php>registration form</a>"
-msgstr "Vstop ni uspel - če nisi registriran, lahko to storiš s pomočjo <a href=main/auth/inscription.php>registracijskega obrazca</a>"
-
 msgid "My account"
 msgstr "Moj račun"
 
@@ -13075,7 +13069,7 @@ msgid "Forums Help"
 msgstr "Pomoč: Forumi (diskusije)"
 
 msgid "<p> The forum is an discussion tool for asynchronous written work.  In contrast to e-mail, a forum is for public, or semi-public, group discussion. </p>To use the Chamilo forum, members can simply use their browser - they do not require any distinct client software. </p>To organize forums, click on the Forums tool. Discussions are organized hierarchically according to the following structure: </ p><b> Category> Forum> Topic> Post</ b> </ p> To ensure members can participate in the forum tidily and effectively, it is essential in the first instance to create categories and forums; it's then up to the participants to create topics and posts. By default, the forum contains a single (public) category, an example topic and an example post. You can add forums to the category,  change its title or create other categories within which you could then create new forums. (Don't confuse categories and forums, and remember that a category that contains no forum is useless and is not displayed.)</p>\n<p>The forum description might include a list of its members, a definition of its purpose, a target a task, a theme etc.</p><p>Group forums should not be created via the Forum tool but instead via the Groups tool, where you can determine whether your group forums should be private or public, at the same time providing a location for sharing groups of documents.</p><b> Teaching Tips</ b></ p> A learning forum is not quite the same as the forums you are used to seeing on the internet. For one thing, it is not possible for learners to alter their posts once they have been published as the course is logically archived to allow tracking of what has been said in the past. Furthermore, Chamilo forums allow for specific uses  relevant to teaching. For example, some teachers/trainers publish corrections directly within forums in the following way: <li> A learner is asked to post a report directly into the forum, </ li> The teacher corrects it by clicking Edit (yellow pencil) and marking it using the graphics editor (color, underlining, etc.) </ li> Finally, other learners benefit from viewing the corrections was made on the production of one of of them, </ li> Note that the same principle can be applied between learners, but will require his copying/pasting the message of his fellow student because students / trainees can not edit one another's posts. <. li> </ ul>"
-msgstr "<p>Forum je pisno, asinhrono orodje za razpravo. Medtem ko e-posta omogoča pogovor ena proti ena, omogočajo forumi javen ali napol javenrazgovor.</p><p>V tehničnem smislu potrebujejo tečajniki za uporabo forumov DokeOS le svoj brkljalnik.</P><p>Forume organiziramo tako, da kliknemo na orodje  'Administacija foruma'. Razprave so organizirane v skupinah ali podskupinah na naslednji način:</p><p><b>Kategorija > Forum > Predmet > Odgovori</b></p><p>Za strukturiranje uporabniških diskusij, jih je vnaprej potrebno organizirati v kategorije in kategorije v posamezne forume. Kreiranje tem in odgovorom pa prepustimo tečajnikom samim. Prednastavljeno Chamilo forum vsebuje le kategorijo 'Javno', demonstracijski forum in primerek teme.</p> <p>Prvo, kar je potrebno narediti je brisanje demonstracijskega foruma in ustrezna sprememba imena prvega foruma. Nato lahko kreiramo, v kategoriji 'Javno' , druge forume, po želenih temah, da bodo ustrezale zahtevam učnega scenarija.</p><p>Ne zamenjujte kategorij in forumov ne pozabite, da se prazna kategorija (brez forumov)  ne pojavlja na spisku forumov v uporabniškem pogledu.</p><p>Opis foruma je lahko seznam njegovih članov,  definicija cilja, naloga,tema, ...</p> <p>Forumov skupin naj bi ne kreirali preko orodij foruma, temveč zgolj preko orodij skupine.     Tu se lahko tudi odločite, ali bo forum skupine javen ali privaten.</p> <b>Pedagoško naprednejša raba</b> <p>Nekateri učitelji / vodje tečajev uporabljajo forume za objavljanje popravkov (nalog, testov, izpitov, vaj, ...).    Pri tem tečajnik objavi preko foruma izdelek. Učitelj z uporabo orodja 'uredi' (rumeno pisalo) oz. vgrajenega   WYSYWIG urejevalnika izvede popravke (uporabi različne barve, podčrtavanje ali prečrtavanje za nakazovanje napak   in izvajanje korekcij). Ker se popravljeni dokumenti pojavljajo v okviru foruma, imajo od tega korist   tudi ostali tečajniki."
+msgstr "<p>Forum je pisno, asinhrono orodje za razpravo. Medtem ko e-posta omogoča pogovor ena proti ena, omogočajo forumi javen ali napol javenrazgovor.</p><p>V tehničnem smislu potrebujejo tečajniki za uporabo forumov Chamilo le svoj brkljalnik.</P><p>Forume organiziramo tako, da kliknemo na orodje  'Administacija foruma'. Razprave so organizirane v skupinah ali podskupinah na naslednji način:</p><p><b>Kategorija > Forum > Predmet > Odgovori</b></p><p>Za strukturiranje uporabniških diskusij, jih je vnaprej potrebno organizirati v kategorije in kategorije v posamezne forume. Kreiranje tem in odgovorom pa prepustimo tečajnikom samim. Prednastavljeno Chamilo forum vsebuje le kategorijo 'Javno', demonstracijski forum in primerek teme.</p> <p>Prvo, kar je potrebno narediti je brisanje demonstracijskega foruma in ustrezna sprememba imena prvega foruma. Nato lahko kreiramo, v kategoriji 'Javno' , druge forume, po želenih temah, da bodo ustrezale zahtevam učnega scenarija.</p><p>Ne zamenjujte kategorij in forumov ne pozabite, da se prazna kategorija (brez forumov)  ne pojavlja na spisku forumov v uporabniškem pogledu.</p><p>Opis foruma je lahko seznam njegovih članov,  definicija cilja, naloga,tema, ...</p> <p>Forumov skupin naj bi ne kreirali preko orodij foruma, temveč zgolj preko orodij skupine.     Tu se lahko tudi odločite, ali bo forum skupine javen ali privaten.</p> <b>Pedagoško naprednejša raba</b> <p>Nekateri učitelji / vodje tečajev uporabljajo forume za objavljanje popravkov (nalog, testov, izpitov, vaj, ...).    Pri tem tečajnik objavi preko foruma izdelek. Učitelj z uporabo orodja 'uredi' (rumeno pisalo) oz. vgrajenega   WYSYWIG urejevalnika izvede popravke (uporabi različne barve, podčrtavanje ali prečrtavanje za nakazovanje napak   in izvajanje korekcij). Ker se popravljeni dokumenti pojavljajo v okviru foruma, imajo od tega korist   tudi ostali tečajniki."
 
 msgid "Dropbox Help"
 msgstr "Pomoč: Nabiralnik"
